# wmf-outreach

./: .env.example  .gitignore  ACTIVE_STAFF.md  ACTIVE_STATUS_SPLIT.md  API_EXAMPLES.md  DEPLOYMENT.md  ENRICHMENT.md  GADGET.md  IMPLEMENTATION_SUMMARY.md  Procfile  QUICKSTART.md  README.md  course_details_api.md  course_users_api.md  gadget_optional_tab.md  outreachdashboard_api_index.md  pyproject.toml  requirements.txt  test-gadget.html  toolforge_project_structure.md  user_stats_api.md
app/: __init__.py  config.py  main.py
app/api/: courses.py  health.py  users.py
app/cache/: __init__.py  redis.py
app/models/: schemas.py
app/services/: __init__.py  outreach.py  refresh.py
app/util/: timing.py
scripts/: demo_active_staff.py  demo_enrich.py  inspect_payloads.py  preload_cache.py
static/: course-staff.html  outreach-staff-gadget.js
tests/: test_api.py  test_enrichment.py
toolforge/: start.sh
