[tool.poetry]
name = "wmf-outreach-backend"
version = "0.1.0"
description = "FastAPI backend for caching Outreach Dashboard data on Toolforge"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
redis = "^5.2.0"
httpx = "^0.28.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-httpx = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
